@@ -36,9 +36,9 @@ class JFormFieldEditors extends JFormFieldList
 	{
 		// compile list of the editors
 		$query	= 'SELECT element AS value, name AS text'
-				. ' FROM #__plugins'
+				. ' FROM #__extensions'
 				. ' WHERE folder = "editors"'
-				. ' AND published = 1'
+				. ' AND enabled = 1'
 				. ' ORDER BY ordering, name';
 		$db = & JFactory::getDbo();
 		$db->setQuery($query);
