@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+01-Jun-2009 Gergo Erdosi
+ # Fixed editor and editors form fields.
+
 01-Jun-2009 Andrew Eddie
  ^ Changed successful translation marker in JLanguage from &bull; to ** to avoid double escaping ugliness.
 
